# exercises

./: .gitlab-ci.yml  Makefile  README.md
ansible-ubuntu-golden-image/: .gitignore  README.md  compose.yml
architecture-aws-wordpress/: README.md  main.tf
backup-to-iso/: .dist.env  Makefile  rsync.dist.exclude
bash-lambda/: Makefile  README.md  bootstrap
blog-entries/: exercises-per-project.md
browser-extension-hello-world/: README.md  content.js
browser-extension-replace-state/: content.js
browser-extension-replace-state-url/: README.md
browser-extention-twitch-timestamp-on-vod-refresh/: background.js  content.js
docker-ollama/: README.md
github-action-symlink/: github-action-symlink-example.yml
golang-auth/: go.mod  main.go
golang-bookmark-db/: .gitignore  DEVELOPMENT.md  README.md  go.mod  go.sum  main.go
golang-counter-repository/: README.md
golang-dynamodb-put-item/: go.mod  infra.tf
golang-lambda/: Makefile  go.mod  main.go
golang-lambda-gin/: .gitignore  Makefile  README.md  terraform.dist.tfvars
golang-lambda-scratch/: Makefile  README.md  go.mod
golang-parse-email-message/: README.md  go.mod  main.go
golang-rest-api/: .dist.env  .gitignore  README.md  go.mod  go.sum  main.go
golang-single-file-api/: go.mod  go.sum  main.go
k3s-fluxcd/: .gitignore
openssl-file-encryption/: .dist.env
php-lambda-dummy-runtime-api/: Makefile
rust/rust-gui-slint/: Cargo.toml  README.md
rust/rust-gui-slint/src/: main.rs
rust/rust-gui-slint/ui/: app.slint
terraform-aws-cloudfront-vpc-origin-lb/: README.md  main.tf
(+734 files in other folders)
