[package]
name = "rust-gui-slint"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.17.1", default-features = false, features = [
    "std",
    "backend-winit-wayland",
    "renderer-software",
    "accessibility",
    "compat-1-2",
] }
sysinfo = "0.39.6"

[build-dependencies]
slint-build = "1.17.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
